[package]
name = "TaskZenith_API"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = '4'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
uuid = { version = '1.6', features = ['v4', 'serde'] }
chrono = { version = '0.4', features = ['serde'] }
actix-web-flash-messages = '0.4'
